Primeiros testes GitPages
Primeiros testes de funcionamento dos links pro GitPages (mexi só no index.html por enquanto)

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <nav>
         <ul class="nav_menu">
           <li class="navItem">
-            <a href="/pages/all_texts_page.html">Textos</a>
+            <a href="pages/all_texts_page.html">Textos</a>
           </li>
 
           <li class="navItem">
@@ -357,9 +357,9 @@
 
       <p class="copyright">© Todos os direitos reservados com orgulho</p>
     </footer>
-    <script src="/src/scripts/rotate_animation.js"></script>
-    <script src="/src/scripts/typewriter.js"></script>
-    <script src="/src/scripts/texts_carousel.js"></script>
-    <script src="/src/scripts/quotations_carousel.js"></script>
+    <script src="src/scripts/rotate_animation.js"></script>
+    <script src="src/scripts/typewriter.js"></script>
+    <script src="src/scripts/texts_carousel.js"></script>
+    <script src="src/scripts/quotations_carousel.js"></script>
   </body>
 </html>
