--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <link
       rel="shortcut icon"
-      href="../src/images/Sunflower favicon.png"
+      href="src/images/Sunflower favicon.png"
       type="image/x-icon"
     />
     <title>Home | Eu, Girassol</title>
