--- a/pages/unidade_page_text.html
+++ b/pages/unidade_page_text.html
@@ -17,7 +17,7 @@
     ></script>
     <style>
       body {
-        background: url(../src/images/milky\ way\ vision.jpg) no-repeat center
+        background: url(../src/images/milky_way_vision.jpg) no-repeat center
           fixed;
         background-size: cover;
       }
@@ -37,7 +37,7 @@
       <nav>
         <ul class="nav_menu">
           <li class="navItem">
-            <a href="/pages/all_texts_page.html">Textos</a>
+            <a href="pages/all_texts_page.html">Textos</a>
           </li>
 
           <li class="navItem">
@@ -152,7 +152,7 @@
         </div>
       </nav>
     </footer>
-    <script src="/src/scripts/rotate_animation.js"></script>
-    <script src="/src/scripts/typewriter.js"></script>
+    <script src="../src/scripts/rotate_animation.js"></script>
+    <script src="../src/scripts/typewriter.js"></script>
   </body>
 </html>
