--- a/pages/(im)perfeito_page_text.html
+++ b/pages/(im)perfeito_page_text.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <header id="page_header" class="header_menu">
-      <a href="/index.html" class="logo">
+      <a href="../index.html" class="logo">
         <img
           src="../src/images/Sunflower Logo (parado).png"
           alt="logo EG"
@@ -42,7 +42,7 @@
       <nav>
         <ul class="nav_menu">
           <li class="navItem">
-            <a href="/pages/all_texts_page.html">Textos</a>
+            <a href="pages/all_texts_page.html">Textos</a>
           </li>
 
           <li class="navItem">
@@ -184,7 +184,7 @@
         </div>
       </nav>
     </footer>
-    <script src="/src/scripts/rotate_animation.js"></script>
-    <script src="/src/scripts/typewriter.js"></script>
+    <script src="../src/scripts/rotate_animation.js"></script>
+    <script src="../src/scripts/typewriter.js"></script>
   </body>
 </html>
