--- a/pages/desmoronamento_page_text.html
+++ b/pages/desmoronamento_page_text.html
@@ -42,7 +42,7 @@
       <nav>
         <ul class="nav_menu">
           <li class="navItem">
-            <a href="/pages/all_texts_page.html">Textos</a>
+            <a href="pages/all_texts_page.html">Textos</a>
           </li>
 
           <li class="navItem">
@@ -148,7 +148,7 @@
         </div>
       </nav>
     </footer>
-    <script src="/src/scripts/rotate_animation.js"></script>
-    <script src="/src/scripts/typewriter.js"></script>
+    <script src="../src/scripts/rotate_animation.js"></script>
+    <script src="../src/scripts/typewriter.js"></script>
   </body>
 </html>
