Links Fixed again
Tinha faltado os links de pastas acima. Todos consertados agora. Bora pra mais um teste.

--- a/pages/all_texts_page.html
+++ b/pages/all_texts_page.html
@@ -63,7 +63,7 @@
 
       <section id="main_content">
         <article class="text_container">
-          <a href="pages/hematoma_page_text.html" target="_blank">
+          <a href="../pages/hematoma_page_text.html" target="_blank">
             <div class="pills">
               <ul>
                 <li>Perda</li>
@@ -82,7 +82,7 @@
         </article>
 
         <article class="text_container">
-          <a href="pages/reencontro_page_text.html" target="_blank">
+          <a href="../pages/reencontro_page_text.html" target="_blank">
             <div class="pills">
               <ul>
                 <li>Amor</li>
@@ -103,7 +103,7 @@
         </article>
 
         <article class="text_container">
-          <a href="pages/hospedeira_page_text.html" target="_blank">
+          <a href="../pages/hospedeira_page_text.html" target="_blank">
             <div class="pills">
               <ul>
                 <li>Ascensão</li>
@@ -123,7 +123,7 @@
         </article>
 
         <article class="text_container">
-          <a href="pages/desmoronamento_page_text.html" target="_blank">
+          <a href="../pages/desmoronamento_page_text.html" target="_blank">
             <div class="pills">
               <ul>
                 <li>Angúsia</li>
@@ -142,7 +142,7 @@
         </article>
 
         <article class="text_container">
-          <a href="pages/tormenta_page_text.html" target="_blank">
+          <a href="../pages/tormenta_page_text.html" target="_blank">
             <div class="pills">
               <ul>
                 <li>Intensidade</li>
@@ -161,7 +161,7 @@
         </article>
 
         <article class="text_container">
-          <a href="pages/impasse_page_text.html" target="_blank">
+          <a href="../pages/impasse_page_text.html" target="_blank">
             <div class="pills">
               <ul>
                 <li>Amor</li>
@@ -183,7 +183,7 @@
         </article>
 
         <article class="text_container">
-          <a href="pages/unidade_page_text.html" target="_blank">
+          <a href="../pages/unidade_page_text.html" target="_blank">
             <div class="pills">
               <ul>
                 <li>Identidade</li>
@@ -202,7 +202,7 @@
         </article>
 
         <article class="text_container">
-          <a href="pages/(im)perfeito_page_text.html" target="_blank">
+          <a href="../pages/(im)perfeito_page_text.html" target="_blank">
             <div class="pills">
               <ul>
                 <li>Amor</li>
@@ -223,7 +223,7 @@
         </article>
 
         <article class="text_container">
-          <a href="pages/perfidia_page_text.html" target="_blank">
+          <a href="../pages/perfidia_page_text.html" target="_blank">
             <div class="pills">
               <ul>
                 <li>Traição</li>
@@ -244,7 +244,7 @@
         </article>
 
         <article class="text_container">
-          <a href="pages/odor_page_text.html" target="_blank">
+          <a href="../pages/odor_page_text.html" target="_blank">
             <div class="pills">
               <ul>
                 <li>Nostalgia</li>
@@ -266,7 +266,7 @@
         </article>
 
         <article class="text_container">
-          <a href="pages/aurora_page_text.html" target="_blank">
+          <a href="../pages/aurora_page_text.html" target="_blank">
             <div class="pills">
               <ul>
                 <li>Amor</li>
@@ -286,7 +286,7 @@
         </article>
 
         <article class="text_container">
-          <a href="pages/vestigios_page_text.html" target="_blank">
+          <a href="../pages/vestigios_page_text.html" target="_blank">
             <div class="pills">
               <ul>
                 <li>Família</li>
@@ -307,7 +307,7 @@
         </article>
 
         <article class="text_container">
-          <a href="pages/seca_page_text.html" target="_blank">
+          <a href="../pages/seca_page_text.html" target="_blank">
             <div class="pills">
               <ul>
                 <li>Partida</li>
@@ -326,7 +326,7 @@
         </article>
 
         <article class="text_container">
-          <a href="pages/afavel-deslize_page_text.html" target="_blank">
+          <a href="../pages/afavel-deslize_page_text.html" target="_blank">
             <div class="pills">
               <ul>
                 <li>Amor</li>
@@ -346,7 +346,7 @@
         </article>
 
         <article class="text_container">
-          <a href="pages/retorno_page_text.html" target="_blank">
+          <a href="../pages/retorno_page_text.html" target="_blank">
             <div class="pills">
               <ul>
                 <li>Recomeço</li>
