--- a/pages/vestigios_page_text.html
+++ b/pages/vestigios_page_text.html
@@ -43,7 +43,7 @@
       <nav>
         <ul class="nav_menu">
           <li class="navItem">
-            <a href="pages/all_texts_page.html">Textos</a>
+            <a href="../pages/all_texts_page.html">Textos</a>
           </li>
 
           <li class="navItem">
