typeWriter algorithm updated
First algorithm update and bug fixed;
Some small text bugs review

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           </div>
           <p>
             Ficou se perguntando o que haveria além do céu para fazê-la dona de
-            um poder tão infinito e que de tão indomável, às vezes cabia no
+            um poder tão infinito e que, de tão indomável, às vezes cabia no
             tamanho de um breve carinho, tal como era o amor.
           </p>
           <hr />
