--- a/pages/all_texts_page.html
+++ b/pages/all_texts_page.html
@@ -126,7 +126,7 @@
           <a href="../pages/desmoronamento_page_text.html" target="_blank">
             <div class="pills">
               <ul>
-                <li>Angúsia</li>
+                <li>Angústia</li>
                 <li>Tensão</li>
                 <li>Enfrentamento</li>
               </ul>
