--- a/pages/aurora_page_text.html
+++ b/pages/aurora_page_text.html
@@ -122,7 +122,7 @@
             seu rosto sem permissão, ela agradeceu aos agora comprovados poderes
             curativos daquelas nuances que a ajudaram e agora já se extinguiam,
             e ficou se perguntando o que haveria além do céu para fazê-la dona
-            de um poder tão infinito e que de tão indomável, às vezes cabia no
+            de um poder tão infinito e que, de tão indomável, às vezes cabia no
             tamanho de um breve carinho, tal como era o amor.
           </p>
         </div>
