--- a/pages/desmoronamento_page_text.html
+++ b/pages/desmoronamento_page_text.html
@@ -61,7 +61,7 @@
         <div class="text_container">
           <h1>Desmoronamento</h1>
           <p>
-            Para uma coisa a rotina capitalista serve: ajuda a desfocar.
+            Para uma coisa o capitalismo é excelente: ajuda a desfocar.
             <br />
             Passar o dia inteiro resolvendo problemas de outras pessoas
             frequentemente faz com que eu me esqueça dos meus. Bato o ponto,
