--- a/index.html
+++ b/index.html
@@ -284,8 +284,8 @@
             O Girassol é a flor preferida de uma beletrista chamada Beatriz
             Aguillera, formada em Letras Português-Italiano pela Universidade de
             São Paulo. Foi lá dentro, por meio de uma matéria da Linguística
-            (Sintaxe) que nasceu o amor por programar. Atravessando
-            um novo momento na carreira,
+            (Sintaxe), que nasceu o amor por programar. Enquanto experimentava
+            novas possibilidades na carreira,
             ela criou esse espaço virtual para reunir uma paixão antiga - a
             escrita - a uma nova - o desenvolvimento web - e desse modo
             conciliar duas vertentes aparentemente distantes, mas que muito têm
